# tools-py

./: .gitignore  pyproject.toml
.claude/: settings.json  settings.local.json
docs/superpowers/plans/: 2026-03-27-cc-project-init.md  2026-03-27-tmux-claude-dash.md  2026-04-02-llm-call-batch-file.md
docs/superpowers/specs/: 2026-03-27-cc-project-init-design.md  2026-03-27-tmux-claude-dash-design.md  2026-04-02-llm-call-batch-file-design.md
src/tools_py/: __init__.py
src/tools_py/cc_project_init/: cli.py  rules.py  writer.py
src/tools_py/llm_call/: cli.py
src/tools_py/symlink/: cli.py
tests/cc_project_init/: test_cli.py  test_rules.py  test_writer.py
tests/llm_call/: test_cli.py
