[project]
name = "tools-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liangyuanwei", email = "liangyuanwei@stepfun.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
