[project]
name = "tools-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liangyuanwei", email = "liangyuanwei@stepfun.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.21.1",
]

[project.scripts]
linky = "tools_py.symlink.cli:main"
llm-call = "tools_py.llm_call.cli:main"
cc-project-init = "tools_py.cc_project_init.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
